[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GameBoard.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/IceCaveLevel1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Drone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/Sounds/Descending.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/Sounds/Impact.wav" type="AudioStream" id=7]
[ext_resource path="res://Art/Sounds/Background.wav" type="AudioStream" id=8]
[ext_resource path="res://Art/Sounds/Scored.wav" type="AudioStream" id=9]
[ext_resource path="res://Art/Sounds/Spotted.wav" type="AudioStream" id=10]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[node name="GameBoard" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 1288.0 ]
}

[node name="ScrollingMap" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="Ceiling" type="Control" parent="ScrollingMap"]
margin_top = 120.0
margin_right = 501.0
margin_bottom = 160.0
mouse_filter = 2

[node name="WebPoint" type="Control" parent="ScrollingMap/Ceiling"]
margin_left = 125.0
margin_top = 40.0
margin_right = 133.0
margin_bottom = 48.0
mouse_filter = 2

[node name="RestartButton" type="Button" parent="ScrollingMap"]
margin_left = 96.0
margin_top = 256.0
margin_right = 240.0
margin_bottom = 352.0
rect_scale = Vector2( 2, 2 )

[node name="Score" type="RichTextLabel" parent="ScrollingMap"]
margin_left = 312.0
margin_top = 8.0
margin_right = 412.0
margin_bottom = 68.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
text = "RESTART
Score: 99
Steps: 999"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Controller" parent="." instance=ExtResource( 3 )]

[node name="SpiderBox" type="Control" parent="."]
margin_left = 45.0
margin_top = 120.0
margin_right = 123.0
margin_bottom = 191.0
rect_scale = Vector2( 4, 4 )
mouse_filter = 2

[node name="Player" parent="SpiderBox" instance=ExtResource( 1 )]
position = Vector2( 24.75, 18 )

[node name="Drone" parent="SpiderBox" instance=ExtResource( 5 )]
margin_left = -32.646
margin_top = 13.182
margin_right = -7.646
margin_bottom = 41.182
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 2
scale = 0.25

[node name="FallingSound" type="AudioStreamPlayer" parent="SpiderBox"]
stream = ExtResource( 6 )
volume_db = -30.0
pitch_scale = 0.5

[node name="ImpactSound" type="AudioStreamPlayer" parent="SpiderBox"]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="ScoreSound" type="AudioStreamPlayer" parent="SpiderBox"]
stream = ExtResource( 9 )
volume_db = -25.0
pitch_scale = 2.0

[node name="SpottedSound" type="AudioStreamPlayer" parent="SpiderBox"]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="BackgroundSound" type="AudioStreamPlayer" parent="ParallaxBackground"]
stream = ExtResource( 8 )
volume_db = -35.0
pitch_scale = 0.5
autoplay = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 0, -240 )
scale = Vector2( 0.257812, 1256 )
normal = SubResource( 3 )
shape_centered = false
shape_visible = false

[node name="ScoreSound" type="AudioStreamPlayer" parent="TouchScreenButton"]
stream = ExtResource( 9 )
volume_db = -10.0
pitch_scale = 4.0

[connection signal="pressed" from="ScrollingMap/RestartButton" to="." method="_on_Button_pressed"]
[connection signal="hold_ended" from="Controller" to="." method="_on_Controller_hold_ended"]
[connection signal="hold_started" from="Controller" to="." method="_on_Controller_hold_started"]
[connection signal="tapped" from="Controller" to="." method="_on_Controller_tapped"]
[connection signal="body_entered" from="SpiderBox/Player" to="." method="_on_Player_body_entered"]
[connection signal="hit_enemy" from="SpiderBox/Player" to="." method="_on_Player_hit_enemy"]
[connection signal="pressed" from="TouchScreenButton" to="Controller" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="Controller" method="_on_TouchScreenButton_released"]
